# anchor-litesvm

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  EVALUATING.md  MIGRATING.md  MUTATIONS.md  Makefile  README.md  index.html  justfile  modeling.html  print.html  searcher-09f2665d.js  searchindex-db0fbc67.js  toc-c4069722.js  toc.html
agent-skill/: SKILL.md  llms.txt
book/: justfile  (+4 more)
book/listings/counter/programs/counter/: Cargo.toml
book/listings/counter/programs/counter/src/: instructions.rs  lib.rs  state.rs  test_helpers.rs
book/listings/counter/programs/counter/tests/: test_counter.rs  test_donate.rs
book/listings/cpamm/programs/amm/: Cargo.toml
book/listings/cpamm/programs/amm/src/: lib.rs  test_helpers.rs
book/listings/frood-narrative/: Cargo.toml
book/listings/frood-narrative/idls/: counter.codama.json
book/listings/frood-narrative/tests/: narrative.rs
crates/anchor-litesvm/: Cargo.toml  README.md
crates/anchor-litesvm-compat/: Cargo.toml
crates/anchor-litesvm-compat/src/: lib.rs
crates/anchor-litesvm-derive/: Cargo.toml
crates/anchor-litesvm-derive/src/: alias_mirror.rs  bundle_from.rs  classify.rs  emit.rs  idl.rs  idl_bundles.rs  lib.rs  parse.rs
crates/anchor-litesvm-derive/tests/: derive_alias_mirror.rs  derive_buildable.rs  derive_buildable_override.rs  derive_bundle_default.rs  derive_bundle_from.rs  derive_from.rs  derive_structural_rule.rs
crates/anchor-litesvm-derive/tests/compile_fail/: build_ix_wrong_args_type.rs  build_ix_wrong_args_type.stderr  idl_missing_file.rs  idl_missing_file.stderr  instruction_name_mismatch.rs  instruction_name_mismatch.stderr  missing_bundled_with.rs  missing_bundled_with.stderr
crates/anchor-litesvm-derive/tests/idls/: ata.json  conflict.json  demoted_fields.json  malformed_program.json  token_flow.json  truncated.json  vault.json
crates/anchor-litesvm/examples/: account_graphs.rs  advanced_features.rs  basic_usage.rs  ctx_rpc_amm.rs
crates/anchor-litesvm/idls/: ata_pool.json  escrow.json  staking.json  vault.json  voting_candidate.json  voting_empty.json  voting_guarded.json  voting_poll.json
crates/anchor-litesvm/src/: account.rs  buildable.rs  builder.rs  context.rs  event_idl.rs  events.rs  idl_sanitize.rs  instruction.rs  lazy.rs  lib.rs  program.rs  tx.rs
crates/anchor-litesvm/tests/: book_escrow.rs  book_stake.rs  book_vault.rs  book_voting_candidate.rs  book_voting_poll.rs  book_voting_vote.rs  deterministic_slot.rs  idl_bundles.rs  idl_bundles_ata.rs  idl_bundles_escrow.rs  voting_interface.rs
crates/anchor-litesvm/tests/common/: mod.rs
crates/litesvm-pinocchio/: Cargo.toml
crates/litesvm-pinocchio-derive/: Cargo.toml
crates/litesvm-pinocchio-derive/src/: lib.rs
crates/litesvm-pinocchio-idl/: Cargo.toml
crates/litesvm-pinocchio-idl/src/: lib.rs  main.rs
crates/litesvm-pinocchio/src/: lib.rs
crates/litesvm-utils/: Cargo.toml  README.md
crates/litesvm-utils/examples/: fabricate_nft.rs  observed_execution.rs  rpc_amm.rs  rpc_smoke.rs
crates/litesvm-utils/proptest-regressions/transaction/tree/: tests.txt
crates/litesvm-utils/src/: actors.rs  assertions.rs  backend.rs  builder.rs  cpi_tree.rs  lib.rs  metaplex.rs  observe.rs  report.rs  test_helpers.rs  token_hooks.rs  tokens.rs  transaction.rs
crates/litesvm-utils/src/naming/: actors.rs  aliases.rs  error_names.rs  events.rs  instruction_names.rs  mod.rs
crates/litesvm-utils/src/transaction/: account_index.rs  aliases.rs  authority.rs  authority_story.rs  error_names.rs  events.rs  instruction_names.rs  mermaid.rs  model.rs  ownership.rs  renderer.rs  signers.rs  style.rs  tests.rs  trace.rs  tree.rs
crates/litesvm-utils/src/transaction/authority/: tests.rs
crates/litesvm-utils/src/transaction/model/: tests.rs
crates/litesvm-utils/src/transaction/ownership/: tests.rs
crates/litesvm-utils/src/transaction/tree/: tests.rs
crates/litesvm-utils/tests/: conformance.rs
crates/svm-witness/: Cargo.toml
crates/svm-witness/src/: lib.rs
crates/testsvm/: Cargo.toml
crates/testsvm-idl/: Cargo.toml
crates/testsvm-idl/src/: lib.rs  main.rs
crates/testsvm-mollusk/: Cargo.toml
crates/testsvm-mollusk/src/: lib.rs
crates/testsvm-quasar/: Cargo.toml
crates/testsvm-quasar-idl/: Cargo.toml
crates/testsvm-quasar-idl/src/: lib.rs
crates/testsvm-quasar/src/: lib.rs
crates/testsvm-quasar/tests/: cpi_tree_reconcile.rs  escrow.rs
crates/testsvm/proptest-regressions/report/: proptests.txt
crates/testsvm/src/: actors.rs  aliases.rs  conformance.rs  cpi.rs  errors.rs  events.rs  frame.rs  instructions.rs  interpret.rs  lib.rs  model.rs  report.rs  style.rs  token.rs  trace.rs
crates/testsvm/src/cpi/: account_index.rs  authority.rs  authority_story.rs  graph.rs  mermaid.rs  model.rs  ownership.rs  render_api.rs  renderer.rs  signers.rs  style.rs  test_support.rs  tree.rs
crates/testsvm/src/report/: baseline.rs  block.rs  canonical.rs  cli.rs  console.rs  core.rs  fingerprint.rs  markdown.rs  normalize.rs  observation.rs  proptests.rs  render.rs  reporter.rs  scenario.rs
md-babelfish/listings/escrow/programs/escrow/: Cargo.toml
md-babelfish/listings/first-test/programs/my_program/: Cargo.toml
md-babelfish/listings/first-test/programs/my_program/src/: lib.rs
md-babelfish/listings/first-test/programs/my_program/tests/: test_initialize.rs
md-babelfish/listings/frood-narrative/: .gitignore  Cargo.toml
md-babelfish/listings/frood-narrative/tests/: narrative.rs
md-babelfish/listings/probe/probe-spec/: Cargo.toml
md-babelfish/listings/probe/probe-spec/src/: lib.rs
md-babelfish/listings/probe/runner-litesvm/: Cargo.toml
md-babelfish/listings/probe/runner-litesvm/tests/: probe.rs
md-babelfish/listings/probe/runner-mollusk/: Cargo.toml
md-babelfish/listings/probe/runner-mollusk/tests/: probe.rs
md-babelfish/listings/probe/runner-quasar/: Cargo.toml
md-babelfish/listings/probe/runner-quasar/tests/: probe.rs
md-babelfish/listings/probe/runner-surfpool/: Cargo.toml
md-babelfish/listings/probe/runner-surfpool/examples/: probe.rs
md-babelfish/listings/vault/programs/vault/: Cargo.toml
(+253 files in other folders)
