[workspace]
members = [
    "crates/litesvm-utils",
    "crates/anchor-litesvm",
    "crates/anchor-litesvm-derive",
    "crates/anchor-litesvm-compat",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/brimigs/anchor-litesvm"
keywords = ["solana", "anchor", "litesvm", "testing", "blockchain"]

# Doc lints, applied to each member that opts in with `[lints] workspace = true`.
# Broken intra-doc links fail `cargo doc`, so the generated API reference
# can't silently rot.
[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.dependencies]
# Tracks the CPI-invocation-tree branch (LiteSVM/litesvm#349, tagged `next`);
# swap to the crates.io release that includes it when that ships.
litesvm = { git = "https://github.com/cds-rs/litesvm", branch = "feat/evergreen" }
litesvm-cpi-tree = { git = "https://github.com/cds-rs/litesvm", branch = "feat/evergreen" }
anchor-lang = "1.0.0"
solana-program = "3.0.0"
solana-program-pack = "3.1.0"
solana-keypair = "3.1.2"
solana-signer = "3.0.0"
solana-transaction = { version = "3.0.1", features = ["bincode"] }
solana-message = "3.1"
solana-account = "3.4"
solana-hash = "3.1.0"
solana-signature = "3.3.0"
borsh = "1.5.3"
sha2 = "0.10.8"
thiserror = "2.0.18"
base64 = "0.22"
# `no-entrypoint` keeps these SPL crates from compiling in their own
# `entrypoint` symbol. Without it, downstream Anchor programs that depend on
# anchor-litesvm hit a duplicate-`entrypoint` link error on Linux (GNU `ld`);
# macOS's `ld64` silently tolerates the collision, which is why this only
# shows up on Linux hosts.
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8.0.0", features = ["no-entrypoint"] }
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
trybuild = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
