[package]
name = "anchor-litesvm-derive"
version = "0.4.0-anchor-0.31"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "[LTS / anchor 0.31 compat] Proc-macro derives for anchor-litesvm. Frozen branch; see MIGRATING.md."
keywords = ["solana", "anchor", "litesvm", "testing", "proc-macro"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
anchor-lang = { workspace = true }
anchor-litesvm = { path = "../anchor-litesvm" }
anchor-spl = { workspace = true }
trybuild = { workspace = true }
solana-program = { workspace = true }
