[package]
name = "anchor-litesvm-derive"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc-macro derives for anchor-litesvm: generate From<Bundle> for accounts::* and BuildableIx impls directly from #[derive(Accounts)] structs."
keywords = ["solana", "anchor", "litesvm", "testing", "proc-macro"]

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
anchor-lang = { workspace = true }
anchor-litesvm = { path = "../anchor-litesvm" }
anchor-spl = "1.0.0"
trybuild = { workspace = true }
solana-program = { workspace = true }
