[package]
name = "anchor-litesvm-derive"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc-macro derives for anchor-litesvm: Bundle defaults, cross-fixture BundleFrom projections, and AliasMirror alias-table registration."
keywords = ["solana", "anchor", "litesvm", "testing", "proc-macro"]

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
anchor-lang = { workspace = true }
anchor-litesvm = { path = "../anchor-litesvm" }
trybuild = { workspace = true }
solana-program = { workspace = true }
