[package]
name = "anchor-litesvm"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Simplified Anchor testing with LiteSVM - similar syntax to anchor-client, 78% less code"
documentation = "https://docs.rs/anchor-litesvm"
keywords = ["solana", "anchor", "litesvm", "testing", "blockchain"]

[dependencies]
litesvm-utils = { version = "0.4.0", path = "../litesvm-utils" }
litesvm = { workspace = true }
anchor-lang = { workspace = true }
solana-program = { workspace = true }
solana-account = "3.4.0"
solana-hash = "3.1.0"
solana-keypair = "3.1.2"
solana-signature = "3.3.0"
solana-signer = "3.0.0"
solana-transaction = { version = "3.0.1", features = ["bincode"] }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
borsh = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"
