[package]
name = "anchor-litesvm"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Simplified Anchor testing with LiteSVM - similar syntax to anchor-client, 78% less code"
documentation = "https://docs.rs/anchor-litesvm"
keywords = ["solana", "anchor", "litesvm", "testing", "blockchain"]

[lints]
workspace = true

[dependencies]
litesvm-utils = { version = "0.4.0", path = "../litesvm-utils" }
anchor-litesvm-derive = { version = "0.4.0", path = "../anchor-litesvm-derive" }
anchor-litesvm-compat = { version = "0.4.0", path = "../anchor-litesvm-compat" }
anchor-lang = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
borsh = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"
# Parse an Anchor IDL to auto-register all of a program's events for decoding.
serde_json = "1"

[features]
# Loads the standard precompiles (ed25519, secp256k1) into the in-memory
# engine, for programs that verify signatures via the instructions sysvar.
precompiles = ["litesvm-utils/precompiles"]

[dev-dependencies]
solana-system-interface = { workspace = true }
solana-instruction = "3.2.0"
