[package]
name = "litesvm-pinocchio-derive"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc-macro derive for Pinocchio programs: from one plain instruction enum, generate the on-chain dispatch discriminators (no_std, ::core-only) while the enum stays syn-visible for host-side IDL extraction."
keywords = ["solana", "pinocchio", "litesvm", "proc-macro"]

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
