[package]
name = "svm-witness"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The neutral SVM execution witness: a privilege-preserving per-frame trace, and (behind the `extract` feature) the one correct walk that produces it from agave's TransactionContext."

[dependencies]
solana-pubkey = { workspace = true }
solana-transaction-context = { version = ">=3.1, <5", optional = true, features = ["agave-unstable-api"] }
solana-account = { workspace = true, optional = true }

[features]
extract = ["dep:solana-transaction-context", "dep:solana-account"]
