[package]
name = "testsvm-mollusk"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/brimigs/anchor-litesvm"
description = "TestSVM adapter for mollusk-svm: Pinocchio-program suites run the same conformance scenarios on mollusk, in a graph that carries no litesvm."

# Deliberately OUTSIDE the workspace (root Cargo.toml `exclude`): the mollusk
# graph (agave-4.0 tilde pins) and the litesvm graph (solana 3.4 pins) cannot
# share one lockfile. Same test, different backend, rebuild.

[dependencies]
testsvm = { path = "../testsvm" }
mollusk-svm = "0.13.1"
solana-svm-log-collector = "4.0"
solana-account = "3.2"
solana-keypair = "3.1"
solana-message = "3.1"
solana-pubkey = "3.0"
solana-clock = "3.0"
solana-signer = "3.0"
solana-instruction = "3.2"
solana-system-interface = "3.1"
