[package]
name = "testsvm"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The test vocabulary: one execution port (TestSVM), one transaction model, conformance scenarios. Engines (litesvm, mollusk, RPC) implement it via adapter crates; program frameworks (Anchor, Pinocchio) describe tests in it."

[lints]
workspace = true

[dependencies]
svm-witness = { workspace = true }
# Thin type crates only, loose ranges: this crate must sit in ANY engine's
# dependency graph (litesvm's solana 3.4-line, mollusk's agave-4.0 3.2/3.3
# pins) without forcing a version on either.
solana-account = "3.2"
solana-instruction = "3.2"
solana-keypair = "3.1"
solana-message = "3.1"
solana-pubkey = "3.0"
solana-clock = "3.0"
solana-signer = "3.0"
# Conformance scenario builds a System transfer. 3.1 floor: 3.2 requires
# solana-instruction ^3.4, which a mollusk graph cannot hold.
solana-system-interface = { version = "3.1", features = ["bincode"] }
# Logged events arrive base64-framed on `Program data:` lines; decoding them in
# the engine-neutral renderer (so every engine's tree gets 🔔, not just litesvm)
# means the base64 strip lives here now. Thin, pins no solana version.
base64 = "0.22"
# Insertion-ordered maps/sets for the CPI renderers (legend, graph nodes/edges).
indexmap = "2.12"
# Framed, wrapping tables for the console Report renderer. No TTY/styling
# features: column widths and borders only.
comfy-table = { version = "7", default-features = false }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }

[features]
fingerprint-baseline = ["dep:flate2", "dep:tar"]

[dev-dependencies]
# The tree renderer's "never panics on arbitrary log garbage" property test.
proptest = "1.5"
