[package]
name = "frood-narrative"
version = "0.0.0"
edition = "2021"
publish = false

# Standalone workspace: frood rides its own pinned litesvm, so this listing's
# dependency graph never mixes with the Anchor listings' (engines never share
# a lockfile; see the Dependencies page). The program under test is the
# committed fixtures/counter.so driven through its Codama IDL: no program
# crate, no Anchor toolchain, which is exactly the consumer shape this
# listing documents.
[workspace]

[dependencies]
frood = { git = "https://github.com/pan-galactic/sol-babelfish", rev = "9e37d627cd5b4d032f5caa2f10cd240e172c9eab" }
frood-idl = { git = "https://github.com/pan-galactic/sol-babelfish", rev = "9e37d627cd5b4d032f5caa2f10cd240e172c9eab" }
solana-pubkey = { version = "3.0", features = ["curve25519"] }
